# Kaleidoscope

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ast.cpp  ast.h  build.sh  ir.cpp  ir.h  jit.cpp  jit.h  lexer.cpp  lexer.h  log.cpp  log.h  main.cpp  mandelbrot.kal  parser.cpp  parser.h
include/: KaleidoscopeJIT.h
src/: CMakeLists.txt  ast.cpp  ir.cpp  ir.h  jit.cpp  lexer.cpp  lexer.h  main.cpp  parser.cpp
src/include/: ast.h  ir.h  jit.h  lexer.h  parser.h
